Add dialog to sample

--- a/sample/helloworld.html
+++ b/sample/helloworld.html
@@ -2,6 +2,14 @@
 <script>
 gadgets.util.registerOnLoadHandler(function() {
   jQuery('#hello').css('color', 'red');
+  jQuery('#hello').click(function() {
+  	gadgets.views.openGadget(function(result) {}, function(site) {}, {
+      view: 'hw_dialog',
+      viewTarget: 'MODALDIALOG',
+      height: 300,
+      width: 500
+    });
+  });
   gadgets.window.adjustHeight();
 });
 </script>
