--- a/sample/dialog.html
+++ b/sample/dialog.html
@@ -1,1 +1,7 @@
 ${Msg.hello_world}!!
+<script>
+gadgets.util.registerOnLoadHandler(function() {
+  gadgets.window.adjustHeight();
+  gadgets.window.adjustWidth();
+});
+</script>
