needed a proper DOM

--- a/sample/dialog.html
+++ b/sample/dialog.html
@@ -1,7 +1,11 @@
+<body>
+<div>
 ${Msg.hello_world}!!
+</div>
 <script>
 gadgets.util.registerOnLoadHandler(function() {
   gadgets.window.adjustHeight();
   gadgets.window.adjustWidth();
 });
 </script>
+</body>
