Change onclick function

--- a/dialog_tutorial/dialog_tutorial.html
+++ b/dialog_tutorial/dialog_tutorial.html
@@ -28,7 +28,7 @@
     </table>
 
     <div>
-      <button id="button" type="button" onclick="createDummy()">Create a Dummy!</button>
+      <button id="button" type="button">Create a Dummy!</button>
     </div>
 
     <div id="item" style="display: none;">
