Add dialog_box and button for dialog_box

--- a/dialog_tutorial/dialog_tutorial.html
+++ b/dialog_tutorial/dialog_tutorial.html
@@ -20,24 +20,13 @@
         <th>ToDo</th>   
         <th>Due</th>
       </tr>
-      <tr>
-        <td><input type="checkbox" name="vehicle" value="Bike"></td>
-        <td>thing</td>
-        <td>5/20</td>
-      </tr>
     </table>
 
     <div>
       <button id="button" type="button">Create a Dummy!</button>
     </div>
 
-    <div id="item" style="display: none;">
-      <tr>
-        <td><input type="checkbox" name="vehicle" value="Bike"></td>
-        <td>thing</td>
-        <td>5/20</td>
-      </tr>
-    </div>
+    <button id="open-dialog-btn" type="button">Create a task</button>
 
   </body>
 </html>
