Add submit new task feature

--- a/dialog_tutorial/dialog_box.html
+++ b/dialog_tutorial/dialog_box.html
@@ -1,14 +1,16 @@
 <html>
-  <script type="text.javascript">
-  </script>
+  <script type="text/javascript" src="dialog_box.js"></script>
 
   <form>
     Task:
-    <input type="text" name="task">
+    <input id="task" type="text" name="task">
     <br>
     Due:
-    <input type="text" name="due">
+    <input id="due" type="text" name="due">
   </form>
-  
+
+  <button id="submit-btn" type="button">Submit</button>
+  <br>
   <button onclick="gadgets.views.close();">Close</button>
+
 </html>
