Add jQuery to dialog_box.html

--- a/dialog_tutorial/dialog_box.html
+++ b/dialog_tutorial/dialog_box.html
@@ -1,5 +1,8 @@
 <html>
-  <script type="text/javascript" src="dialog_box.js"></script>
+  <head>
+    <script src="https://code.jquery.com/jquery-1.11.2.js"></script>
+    <script type="text/javascript" src="dialog_box.js"></script>
+  </head>
 
   <form>
     Task:
