Add a warning message for input fields

--- a/dialog_tutorial/dialog_box.html
+++ b/dialog_tutorial/dialog_box.html
@@ -3,7 +3,10 @@
     <script src="https://code.jquery.com/jquery-1.11.2.js"></script>
     <script type="text/javascript" src="dialog_box.js"></script>
   </head>
+  <style>
+  </style>
 
+  <label id="message">Please enter the fields</label><br>
   <form>
     Task:
     <input id="task" type="text" name="task">
