Change button type

--- a/dialog_tutorial/dialog_box.html
+++ b/dialog_tutorial/dialog_box.html
@@ -13,10 +13,9 @@
     <br>
     Due:
     <input id="due" type="text" name="due">
+    <br>
+    <input id="submit-btn" type="submit" value="Submit"></button>
+    <br>
+    <button onclick="gadgets.views.close();">Close</button>
   </form>
-
-  <button id="submit-btn" type="button">Submit</button>
-  <br>
-  <button onclick="gadgets.views.close();">Close</button>
-
 </html>
