--- a/dialog_tutorial/dialog_tutorial.html
+++ b/dialog_tutorial/dialog_tutorial.html
@@ -14,23 +14,8 @@
   </style>
   <body>
     <h2>Agenda</h2>
-    <div style="display: block;">
+    <div>
       <table id="init-table" style="width:100%">
-        <tr>
-          <th>Done</th>
-          <th>ToDo</th>   
-          <th>Due</th>
-        </tr>
-      </table>
-    </div>
-
-    <div id="updated-table" style="display: none;">
-      <table style="width:100%">
-        <tr>
-          <th>Done</th>
-          <th>ToDo</th>   
-          <th>Due</th>
-        </tr>
       </table>
     </div>
 
