--- a/dialog_tutorial/dialog_box.html
+++ b/dialog_tutorial/dialog_box.html
@@ -15,9 +15,9 @@
     <input id="due" type="text" name="due">
     <br>
     <input id="submit-btn" type="submit" value="submit"></button>
+    <br>
+    <button type="button" onclick="gadgets.views.close();">Close</button>
   </form>
 
-  <br>
-  <button type="submit" onclick="gadgets.views.close();">Close</button>
 
 </html>
