Bug fix in Search_Jam_Appdata gadget. HTML code for buttons and text areas were missing.

--- a/testing_MB/Search/Search_Jam_Appdata/Search_Jam_Appdata.html
+++ b/testing_MB/Search/Search_Jam_Appdata/Search_Jam_Appdata.html
@@ -24,3 +24,7 @@
    });
   };
 </script>
+
+<button onclick="get_appdata()">get appdata</button>
+<button onclick="update_appdata()">update appdata</button>
+<textarea id="results"></textarea>
