apply bootstrap styling for dialog_tutorial

--- a/GY/dialog_tutorial/dialog_box.html
+++ b/GY/dialog_tutorial/dialog_box.html
@@ -1,22 +1,30 @@
 <html>
   <head>
     <script src="https://code.jquery.com/jquery-1.11.2.js"></script>
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
+
+    <!-- Optional theme -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap-theme.min.css">
+
+    <!-- Latest compiled and minified JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="dialog_box.js"></script>
   </head>
   <style>
   </style>
 
   <label id="message">Please enter the fields</label><br>
-  <form id="submit-form">
+  <form class="form-group" id="submit-form">
     Task:
     <input id="task" type="text" name="task">
     <br>
     Due:
     <input id="due" type="text" name="due">
     <br>
-    <input id="submit-btn" type="submit" value="submit"></button>
+    <input class="btn btn-sm" id="submit-btn" type="submit" value="submit"></button>
     <br>
-    <button type="button" onclick="gadgets.views.close();">Close</button>
+    <button class="btn btn-sm" type="button" onclick="gadgets.views.close();">Close</button>
   </form>
 
 </html>
