--- a/GY/dialog_tutorial/dialog_tutorial.html
+++ b/GY/dialog_tutorial/dialog_tutorial.html
@@ -1,6 +1,14 @@
 <html>
   <head>
     <script src="https://code.jquery.com/jquery-1.11.2.js"></script>
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
+
+    <!-- Optional theme -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap-theme.min.css">
+
+    <!-- Latest compiled and minified JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="dialog_tutorial.js"></script>
   </head>
   <style>
@@ -15,11 +23,11 @@
   <body>
     <h2>Agenda</h2>
     <div>
-      <table id="init-table" style="width:100%">
+      <table class="table table-striped table-bordered" id="init-table">
       </table>
     </div>
 
-    <button id="open-dialog-btn" type="button">Create a task</button>
+    <button class="btn btn-sm" id="open-dialog-btn" type="button">Create a task</button>
 
   </body>
 </html>
