--- a/GY/dialog_tutorial/dialog_tutorial.html
+++ b/GY/dialog_tutorial/dialog_tutorial.html
@@ -4,9 +4,6 @@
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
 
-    <!-- Optional theme -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap-theme.min.css">
-
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="dialog_tutorial.js"></script>
@@ -23,7 +20,7 @@
   <body>
     <h2>Agenda</h2>
     <div>
-      <table class="table table-striped table-bordered" id="init-table">
+      <table class="table table-striped" id="init-table">
       </table>
     </div>
 
