--- a/GY/dialog_tutorial/dialog_tutorial.html
+++ b/GY/dialog_tutorial/dialog_tutorial.html
@@ -24,7 +24,7 @@
       </table>
     </div>
 
-    <button class="btn btn-sm" id="open-dialog-btn" type="button">Create a task</button>
+    <button class="btn btn-default btn-sm" id="open-dialog-btn" type="button">Create a task</button>
 
   </body>
 </html>
