--- a/GY/dialog_tutorial/dialog_box.html
+++ b/GY/dialog_tutorial/dialog_box.html
@@ -14,10 +14,10 @@
   <label id="message">Please enter the fields</label><br>
   <form class="form-group" id="submit-form">
     <label for="exampleInputName2">Task</label>
-    <input class="form-control" id="task" type="text" name="task" placeholder="Text input">
+    <input class="form-control" id="task" type="text" name="task" placeholder="task name">
     <br>
     <label for="exampleInputName2">Due</label>
-    <input class="form-control" id="due" type="text" name="due" placeholder="Text input">
+    <input class="form-control" id="due" type="text" name="due" placeholder="date">
     <br>
     <input class="btn btn-default btn-sm" id="submit-btn" type="submit" value="submit"></button>
     <button class="btn btn-default btn-sm" type="button" onclick="gadgets.views.close();">Close</button>
