change react-bootstrap.js location

--- a/GY/react_opensocial/react_agenda/react_agenda.html
+++ b/GY/react_opensocial/react_agenda/react_agenda.html
@@ -6,7 +6,7 @@
   </head>
 
   <body>
-    <script type="text/javascript" src="lib/react-bootstrap.js"></script>
+    <script type="text/javascript" src="react-bootstrap.js"></script>
     <script type="text/javascript">
       var Table = ReactBootstrap.Table;
       var ButtonToolbar = ReactBootstrap.ButtonToolbar;
