--- a/GY/react_opensocial/react_agenda/react_agenda.html
+++ b/GY/react_opensocial/react_agenda/react_agenda.html
@@ -1,7 +1,12 @@
 <html>
   <head>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="css/bootstrap-datepicker.min.css" />
+    <!-- Latest compiled and minified JavaScript -->
     <script src="https://code.jquery.com/jquery-1.11.2.js"></script>
+    <script type="text/javascript" src="lib/moment.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="lib/bootstrap-datepicker.min.js"></script>
     <script src="https://fb.me/react-0.13.3.min.js"></script>
   </head>
 
