--- a/testing_MB/Google_Hangouts_sameWindow/Google_Hangouts_sameWindow.html
+++ b/testing_MB/Google_Hangouts_sameWindow/Google_Hangouts_sameWindow.html
@@ -4,5 +4,10 @@
 
 <div id="placeholder-div"></div>
 
-<script type="text/javascript" src="Google_Hangouts_sameWindow.js"></script>
+<script>
+gapi.hangout.render('placeholder-div', { 'render': 'createhangout' });
+</script>
+
+
+<!-- <script type="text/javascript" src="Google_Hangouts_sameWindow.js"></script> -->
 
