--- a/GY/react_opensocial/react_agenda/react_agenda2.html
+++ b/GY/react_opensocial/react_agenda/react_agenda2.html
@@ -9,6 +9,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="lib/bootstrap-datepicker.min.js"></script>
     <script type="text/javascript" src="lib/jquery-ui.min.js"></script>
+    <script type="text/javascript" src="lib/jquery.tabledit.js"></script>
     <script src="http://fb.me/react-0.13.2.min.js"></script>
   </head>
 
