Removed Language code

--- a/testing_MB/Google_Hangouts_sameWindow/Google_Hangouts_sameWindow.html
+++ b/testing_MB/Google_Hangouts_sameWindow/Google_Hangouts_sameWindow.html
@@ -1,13 +1,11 @@
 <html>
 <head>
-    <title>Hangout button demo: Deferred execution with language code</title>
-    <link rel="canonical" href="http://www.example.com" />
+    <title>Hangout button demo: Deferred execution</title>
 </head>
 <body>
   <div id="placeholder-div"></div>
   <script>
     window.___gcfg = {
-      lang: 'zh-CN',
       parsetags: 'onload'
     };
 
