--- a/GY/react_opensocial/react_agenda/react_agenda3.html
+++ b/GY/react_opensocial/react_agenda/react_agenda3.html
@@ -2,6 +2,7 @@
   <head>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/bootstrap-datepicker.min.css" />
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/x-editable/1.5.0/bootstrap3-editable/css/bootstrap-editable.css" rel="stylesheet"/>
     <link rel="stylesheet" type="text/css" href="css/custom.css" />
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://code.jquery.com/jquery-1.11.2.js"></script>
@@ -10,6 +11,7 @@
     <script type="text/javascript" src="lib/bootstrap-datepicker.min.js"></script>
     <script type="text/javascript" src="lib/jquery-ui.min.js"></script>
     <script type="text/javascript" src="lib/jquery.tabledit.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/x-editable/1.5.0/bootstrap3-editable/js/bootstrap-editable.min.js"></script>
     <script src="http://fb.me/react-0.13.2.min.js"></script>
   </head>
 
