--- a/testing_MB/Skype_Web/Skype_Web.html
+++ b/testing_MB/Skype_Web/Skype_Web.html
@@ -8,7 +8,7 @@
 
 <script>
 function myFunction() {
-    window.open("https://web.skype.com","_self");
+    window.open("https://web.skype.com","_blank");
 }
 </script>
 
