--- a/GY/react_opensocial/react_agenda/react_agenda3.html
+++ b/GY/react_opensocial/react_agenda/react_agenda3.html
@@ -3,6 +3,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/bootstrap-datepicker.min.css" />
     <link href="https://cdnjs.cloudflare.com/ajax/libs/x-editable/1.5.0/bootstrap3-editable/css/bootstrap-editable.css" rel="stylesheet"/>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.0/css/select2.min.css" rel="stylesheet"/>
     <link rel="stylesheet" type="text/css" href="css/select2-bootstrap.css" />
     <link rel="stylesheet" type="text/css" href="css/custom.css" />
     <!-- Latest compiled and minified JavaScript -->
@@ -12,7 +13,7 @@
     <script type="text/javascript" src="lib/bootstrap-datepicker.min.js"></script>
     <script type="text/javascript" src="lib/jquery-ui.min.js"></script>
     <script type="text/javascript" src="lib/jquery.tabledit.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.0/js/select2.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.0/js/select2.full.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/x-editable/1.5.0/bootstrap3-editable/js/bootstrap-editable.min.js"></script>
     <script src="http://fb.me/react-0.13.2.min.js"></script>
   </head>
