--- a/testing_MB/Feed_Input_Output/Feed_Input_Output.html
+++ b/testing_MB/Feed_Input_Output/Feed_Input_Output.html
@@ -5,7 +5,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/es5-shim/4.1.1/es5-sham.js"></script>
     <script src="http://fb.me/react-0.13.1.js"></script>
     <script src="https://code.jquery.com/jquery-1.11.2.js"></script>
-    <script src="bulletlist.js"></script>
+    <script src="Feed_Input_Output.js"></script>
   </head>
   <body>
   </body>
