--- a/testing_MB/IoT/GoogleMapsTest/GoogleMapsTest.html
+++ b/testing_MB/IoT/GoogleMapsTest/GoogleMapsTest.html
@@ -2,12 +2,32 @@
 <html>
 <body>
 
-<button onclick="myFunction()">Google Maps Test</button>
+<button onclick="blank_WINDOW()">Google Maps - _blank</button>
+<button onclick="myFunction()">Google Maps - _parent</button>
+<button onclick="myFunction()">Google Maps - _self</button>
+<button onclick="myFunction()">Google Maps - _top</button>
+
+
 
 <script>
-function myFunction() {
-    window.open("https://www.google.com/maps/place/Waterfront+Stn+West+Unload+Only/@49.2729987,-123.1250285,15z/data=!4m2!3m1!1s0x5486717809bde70d:0x9ade3b8ff2a4e400","_blank");
+var theURL = "https://www.google.com/maps/place/Waterfront+Stn+West+Unload+Only/@49.2729987,-123.1250285,15z/data=!4m2!3m1!1s0x5486717809bde70d:0x9ade3b8ff2a4e400";
+
+function blank_WINDOW() {
+    window.open(theURL,"_blank");
 }
+
+function blank_WINDOW() {
+    window.open(theURL,"_parent");
+}
+
+function blank_WINDOW() {
+    window.open(theURL,"_self");
+}
+
+function blank_WINDOW() {
+    window.open(theURL,"_top");
+}
+
 </script>
 
 </body>
