--- a/testing_MB/IoT/GoogleMapsTest/test.html
+++ b/testing_MB/IoT/GoogleMapsTest/test.html
@@ -4,8 +4,8 @@
 <title>HTML Target Frames</title>
 </head>
 <frameset cols="200, *">
-   <frame src="/html/menu.html" name="menu_page" />
-   <frame src="/html/main.html" name="main_page" />
+   <frame src="menu.html" name="menu_page" />
+   <frame src="main.html" name="main_page" />
    <noframes>
    <body>
       Your browser does not support frames.
