--- a/snappy/snappy.html
+++ b/snappy/snappy.html
@@ -6,14 +6,17 @@
     <script src="snappy.js"></script>
     <style>
       html, body {
-        height: 100%;
         margin: 0px;
         padding: 0px
+      }
+      .outer {
+        height: 300px;
+        width: 600px;
       }
     </style>
   </head>
   <body>
-    <div id="map-canvas" style="width: 600px; height 300px;"></div>
-    <div id="pano" style="width: 600px; height 300px;"></div>
+    <div class="outer"><div id="map-canvas" style="width: 100%; height 100%;"></div></div>
+    <div class="outer"><div id="pano" style="width: 100%; height 100%;"></div></div>
   </body>
 </html>
