--- a/snappy/snappy.html
+++ b/snappy/snappy.html
@@ -16,7 +16,7 @@
     </style>
   </head>
   <body>
-    <div class="outer"><div id="map-canvas" style="width: 100%; height 100%;"></div></div>
-    <div class="outer"><div id="pano" style="width: 100%; height 100%;"></div></div>
+    <div class="outer"><div id="map-canvas" style="width: 100%; height: 100%;"></div></div>
+    <div class="outer"><div id="pano" style="width: 100%; height: 100%;"></div></div>
   </body>
 </html>
