--- a/snappy/snappy.html
+++ b/snappy/snappy.html
@@ -16,6 +16,7 @@
     </style>
   </head>
   <body>
+    <input id='search-box' class='controls' type='text' placeholder='__MSG_searchHint__'/>
     <div class="outer"><div id="map-canvas" style="width: 100%; height: 100%;"></div></div>
     <div class="outer"><div id="pano" style="width: 100%; height: 100%;"></div></div>
   </body>
