--- a/snappy/snappy.html
+++ b/snappy/snappy.html
@@ -2,7 +2,7 @@
   <head>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <script src="https://code.jquery.com/jquery-1.11.2.js"></script>
-    <script src="https://maps.googleapis.com/maps/api/js?v=3"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?v=3&amp;libraries=places"></script>
     <script src="snappy.js"></script>
     <style>
       html, body {
