--- a/snappy/snappy.html
+++ b/snappy/snappy.html
@@ -3,6 +3,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <script src="https://code.jquery.com/jquery-1.11.2.js"></script>
     <script src="https://maps.googleapis.com/maps/api/js?v=3&amp;libraries=places"></script>
+
+    <!-- Bootstrap -->
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+    <!-- Optional theme -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
+    <!-- Latest compiled and minified JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+
     <script src="snappy.js"></script>
     <style>
       html, body {
@@ -16,7 +25,7 @@
     </style>
   </head>
   <body>
-    <input id='search-box' class='controls' type='text' placeholder='__MSG_searchHint__'/>
+    <input id='search-box' class='controls' type='text' placeholder='Enter a place or an address'/>
     <div class="outer"><div id="map-canvas" style="width: 100%; height: 100%;"></div></div>
     <div class="outer"><div id="pano" style="width: 100%; height: 100%;"></div></div>
   </body>
