--- a/snappy/snappy.html
+++ b/snappy/snappy.html
@@ -22,10 +22,14 @@
         height: 300px;
         width: 600px;
       }
+      #search-box {
+        margin: 10px;
+        width: 300px;
+      }
     </style>
   </head>
   <body>
-    <input id='search-box' class='controls' type='text' placeholder='Enter a place or an address'/>
+    <input id='search-box' class='form-control' type='text' placeholder='Enter a place or an address'/>
     <div class="outer"><div id="map-canvas" style="width: 100%; height: 100%;"></div></div>
     <div class="outer"><div id="pano" style="width: 100%; height: 100%;"></div></div>
   </body>
