--- a/snappy/snappy.html
+++ b/snappy/snappy.html
@@ -32,5 +32,11 @@
     <input id='search-box' class='form-control' type='text' placeholder='Enter a place or an address'/>
     <div class="outer"><div id="map-canvas" style="width: 100%; height: 100%;"></div></div>
     <div class="outer"><div id="pano" style="width: 100%; height: 100%;"></div></div>
+    <div class="input-group">
+      <span class="input-group-btn">
+        <button class="btn btn-primary" type="button">Save this place!</button>
+      </span>
+      <input id='comment' class='form-control' type='text' placeholder='(Optional) a comment for this place'/>
+    </div>
   </body>
 </html>
