--- a/snappy/snappy.html
+++ b/snappy/snappy.html
@@ -18,6 +18,9 @@
         margin: 0px;
         padding: 0px
       }
+      .full-width {
+        width: 600px;
+      }
       .outer {
         height: 300px;
         width: 600px;
@@ -26,17 +29,22 @@
         margin: 10px;
         width: 300px;
       }
+      .full-width .input-group {
+        margin: 10px;
+      }
     </style>
   </head>
   <body>
     <input id='search-box' class='form-control' type='text' placeholder='Enter a place or an address'/>
     <div class="outer"><div id="map-canvas" style="width: 100%; height: 100%;"></div></div>
     <div class="outer"><div id="pano" style="width: 100%; height: 100%;"></div></div>
-    <div class="input-group">
-      <span class="input-group-btn">
-        <button class="btn btn-primary" type="button">Save this place!</button>
-      </span>
-      <input id='comment' class='form-control' type='text' placeholder='(Optional) a comment for this place'/>
+    <div class="full-width">
+      <div class="input-group">
+        <span class="input-group-btn">
+          <button class="btn btn-primary" type="button">Save this place!</button>
+        </span>
+        <input id='comment' class='form-control' type='text' placeholder='(Optional) a comment for this place'/>
+      </div>
     </div>
   </body>
 </html>
