--- a/snappy/snappy.html
+++ b/snappy/snappy.html
@@ -30,7 +30,7 @@
         width: 300px;
       }
       .full-width .input-group {
-        margin: 10px;
+        margin-top: 10px;
       }
     </style>
   </head>
