--- a/snappy/snappy.html
+++ b/snappy/snappy.html
@@ -41,9 +41,9 @@
     <div class="full-width">
       <div class="input-group">
         <span class="input-group-btn">
-          <button class="btn btn-primary" type="button">Save this place!</button>
+          <button id='save-button' class="btn btn-primary" type="button">Save this place!</button>
         </span>
-        <input id='comment' class='form-control' type='text' placeholder='(Optional) a comment for this place'/>
+        <input id='save-comment' class='form-control' type='text' placeholder='(Optional) a comment for this place'/>
       </div>
     </div>
   </body>
