--- a/testing_MB/IoT/GoogleMapsTest/test.html
+++ b/testing_MB/IoT/GoogleMapsTest/test.html
@@ -1,15 +1,23 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title>HTML Target Frames</title>
-</head>
-<frameset cols="200, *">
-   <frame src="menu.html" name="menu_page" />
-   <frame src="main.html" name="main_page" />
-   <noframes>
-   <body>
-      Your browser does not support frames.
-   </body>
-   </noframes>
-</frameset>
+<body>
+
+<iframe
+  width="600"
+  height="450"
+  frameborder="0" style="border:0"
+  src="https://www.google.com/maps/embed/v1/place?key=AIzaSyDKEQwUK06xbf03MOo5qiRlqwItY6_knA4
+    &q=Space+Needle,Seattle+WA" allowfullscreen>
+</iframe>
+
+<iframe width="100%" height="300px" src="main.html" name="display_frame"></iframe>
+
+<p><a href="http://www.w3schools.com" target="display_frame">W3Schools.com</a></p>
+<p><a href="http://maps.google.com" target="display_frame">Google</a></p>
+<p><a href="http://www.microsoft.com" target="display_frame">Microsoft</a></p>
+<p><a href="http://news.bbc.co.uk" target="display_frame">BBC News</a></p>
+
+<p>When the target of a link matches the name of an iframe, the link will open in the iframe.</p>
+
+</body>
 </html>
