--- a/GY/react_opensocial/react_agenda/react_agenda5.html
+++ b/GY/react_opensocial/react_agenda/react_agenda5.html
@@ -17,4 +17,10 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/x-editable/1.5.0/bootstrap3-editable/js/bootstrap-editable.min.js"></script>
     <script src="http://fb.me/react-0.13.2.min.js"></script>
   </head>
+
+  <body>
+    <script type="text/javascript" src="lib/react-bootstrap.js"></script>
+    <script type="text/javascript" src="react_agenda4.js"></script>
+  </body>
+  
 </html>
