--- a/testing_MB/IoT/GoogleMapsTest/GoogleMapsTest.html
+++ b/testing_MB/IoT/GoogleMapsTest/GoogleMapsTest.html
@@ -2,13 +2,24 @@
 <html>
 <body>
 
+<iframe
+  width="600"
+  height="450"
+  frameborder="0" style="border:0"
+  src="https://www.google.com/maps/embed/v1/place?key=AIzaSyDKEQwUK06xbf03MOo5qiRlqwItY6_knA4
+    &q=Space+Needle,Seattle+WA" allowfullscreen>
+</iframe>
+
+<!--
+
 <p><button onclick="blank_WINDOW()">Google Maps - _blank</button></p>
 <p><button onclick="parent_WINDOW()">Google Maps - _parent</button></p>
 <p><button onclick="self_WINDOW()">Google Maps - _self</button></p>
 <p><button onclick="top_WINDOW()">Google Maps - _top</button></p>
 
+-->
 
-
+<!--
 <script>
 var theURL = "https://www.google.com/maps/place/Waterfront+Stn+West+Unload+Only/@49.2729987,-123.1250285,15z/data=!4m2!3m1!1s0x5486717809bde70d:0x9ade3b8ff2a4e400";
 
@@ -29,6 +40,7 @@ function top_WINDOW() {
 }
 
 </script>
+-->
 
 </body>
 </html>
