Google My Maps Test

--- a/testing_MB/IoT/GoogleMapsTest/GoogleMapsTest.html
+++ b/testing_MB/IoT/GoogleMapsTest/GoogleMapsTest.html
@@ -2,6 +2,18 @@
 <html>
 <body>
 
+<iframe src="https://www.google.com/maps/d/embed?mid=zRABxlnV3cpY.k2Os_ExVz7mY" width="640" height="480"></iframe>
+
+<!--
+<iframe
+  width="600"
+  height="450"
+  frameborder="0" style="border:0"
+  src="https://www.google.com/maps/d/edit?mid=zRABxlnV3cpY.k2Os_ExVz7mY&usp=sharing" allowfullscreen>
+</iframe>
+-->
+
+<!--
 <iframe
   width="600"
   height="450"
@@ -9,14 +21,13 @@
   src="https://www.google.com/maps/embed/v1/place?key=AIzaSyDKEQwUK06xbf03MOo5qiRlqwItY6_knA4
     &q=Space+Needle,Seattle+WA" allowfullscreen>
 </iframe>
+-->
 
 <!--
-
 <p><button onclick="blank_WINDOW()">Google Maps - _blank</button></p>
 <p><button onclick="parent_WINDOW()">Google Maps - _parent</button></p>
 <p><button onclick="self_WINDOW()">Google Maps - _self</button></p>
 <p><button onclick="top_WINDOW()">Google Maps - _top</button></p>
-
 -->
 
 <!--
