--- a/tg/tg.html
+++ b/tg/tg.html
@@ -1,16 +1,7 @@
-<iframe width="200" height="400" src="https://web.telegram.org/#/im">
+<iframe width="200" height="400" src="https://web.telegram.org/#/im" sandbox="allow-forms allow-popups allow-same-origin allow-scripts">
 <script>
 gadgets.util.registerOnLoadHandler(function() {
   gadgets.window.adjustHeight();
   gadgets.window.adjustWidth();
 });
-
-var prevent_bust = 0  
-window.onbeforeunload = function() { prevent_bust++ }  
-setInterval(function() {  
-  if (prevent_bust > 0) {  
-    prevent_bust -= 2  
-    window.top.location = '#';  
-  }  
-}, 1);
 </script>
