--- a/GY/react_opensocial/react_agenda/react_agenda_dialog_box5.html
+++ b/GY/react_opensocial/react_agenda/react_agenda_dialog_box5.html
@@ -18,4 +18,9 @@
     <script src="http://fb.me/react-0.13.2.min.js"></script>
   </head>
   
+  <body>
+    <script type="text/javascript" src="lib/react-bootstrap.js"></script>
+    <script type="text/javascript" src="react_agenda_dialog_box5.js"></script>
+  </body>
+
 </html>
