--- a/sample/helloworld.html
+++ b/sample/helloworld.html
@@ -11,6 +11,7 @@ gadgets.util.registerOnLoadHandler(function() {
 
   gadgets.sapjam && gadgets.sapjam.context && gadgets.sapjam.context.get(function(context) {
     jQuery('#context').html(gadgets.json.stringify(context));
+    gadgets.window.adjustHeight();
   });
 
   gadgets.window.adjustHeight();
