--- a/testing_MB/SAML2/SAML2.html
+++ b/testing_MB/SAML2/SAML2.html
@@ -1,5 +1,5 @@
 <html>
-  <!-- Jam Instance A interacting with Jam Instance B -->
+  <!-- Jam Instance A interacting with Jam Instance A -->
   <!-- via OpenSocial OAuth 2.0 SAML 2.0 Bearer Assertion Flow -->
   <head>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
