--- a/testing_MB/SAML2/SAML2.html
+++ b/testing_MB/SAML2/SAML2.html
@@ -7,7 +7,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/es5-shim/4.1.1/es5-sham.js"></script>
     <script src="http://fb.me/react-0.13.1.js"></script>
     <script src="https://code.jquery.com/jquery-1.11.2.js"></script>
-    <script src="SAML2_OAuth_1_Jam_instance.js"></script>
+    <script src="SAML2.js"></script>
   </head>
   <body>
   </body>
