--- a/testing_MB/CacheDeveloperHCPHTML5/CacheDeveloperHCPHTML5.html
+++ b/testing_MB/CacheDeveloperHCPHTML5/CacheDeveloperHCPHTML5.html
@@ -1,17 +1,17 @@
 <html>
   <!-- Jam Instance A interacting with target servers -->
   <!-- via OpenSocial OAuth 2.0 SAML 2.0 Bearer Assertion Flow -->
-  <!-- <head>
+  <head>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/es5-shim/4.1.1/es5-shim.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/es5-shim/4.1.1/es5-sham.js"></script>
     <script src="http://fb.me/react-0.13.1.js"></script>
     <script src="https://code.jquery.com/jquery-1.11.2.js"></script>
     <script src="CacheDeveloperHCPHTML5.js"></script>
-  </head> -->
+  </head>
   <body>
-  <h1>Your iframe:</h1>
+  <!-- <h1>Your iframe:</h1>
   <iframe
-  src="https://helloworld-p1941586444trial.dispatcher.hanatrial.ondemand.com/" height="" width="">You need an iframes capable browser to view this content.</iframe>
+  src="https://helloworld-p1941586444trial.dispatcher.hanatrial.ondemand.com/" height="" width="">You need an iframes capable browser to view this content.</iframe> -->
   </body>
 </html>
