Switching back to HCP SSO.

--- a/testing_MB/CacheDeveloperHCPHTML5/CacheDeveloperHCPHTML5.html
+++ b/testing_MB/CacheDeveloperHCPHTML5/CacheDeveloperHCPHTML5.html
@@ -1,17 +1,26 @@
 <html>
   <!-- Jam Instance A interacting with target servers -->
   <!-- via OpenSocial OAuth 2.0 SAML 2.0 Bearer Assertion Flow -->
-  <head>
+  <!-- <head>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/es5-shim/4.1.1/es5-shim.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/es5-shim/4.1.1/es5-sham.js"></script>
     <script src="http://fb.me/react-0.13.1.js"></script>
     <script src="https://code.jquery.com/jquery-1.11.2.js"></script>
     <script src="CacheDeveloperHCPHTML5.js"></script>
-  </head>
+  </head> -->
   <body>
-  <!-- <h1>Your iframe:</h1>
+  <p>---------------------------------------------------------------------------</p>
+  <p>Content from: helloworld-p1941586444trial.dispatcher.hanatrial.ondemand.com</p>
+  <p>Problem: Hana Cloud Platform is automatically performing the SSO for
+    this. It does not need of the OAuth SAML Bearer flow to be setup since this 
+    appears to be setup by default. As long as the user is on SAP ID Service 
+    it will allow them to access the Hello World page with SSO.</p>
+  <p>Possible Solution: Setup a destination to force Hana Cloud Platform to not 
+    use the default SAP ID service automatically and use our OpenSocial OAuth SAML
+    Bearer Flow instead.</p>
+  <p>---------------------------------------------------------------------------</p>
   <iframe
-  src="https://helloworld-p1941586444trial.dispatcher.hanatrial.ondemand.com/" height="" width="">You need an iframes capable browser to view this content.</iframe> -->
+  src="https://helloworld-p1941586444trial.dispatcher.hanatrial.ondemand.com/" height="" width="">You need an iframes capable browser to view this content.</iframe>
   </body>
 </html>
