Pro/Con gadget version 2. 1. show a blank row if no topics. 2. add table footer with summary and full text button.

--- a/PaulChen/ProConGadget/ProCon.react.html
+++ b/PaulChen/ProConGadget/ProCon.react.html
@@ -4,8 +4,10 @@
     <link rel="stylesheet" type="text/css" href="bower_components/bootstrap/dist/css/bootstrap-theme.css">
     <link rel="stylesheet" type="text/css" href="css/PCTDataTable.css">
     <link rel="stylesheet" type="text/css" href="css/PCTHead.css">
+    <link rel="stylesheet" type="text/css" href="css/PCTFoot.css">
     <link rel="stylesheet" type="text/css" href="css/OptionData.css">
     <link rel="stylesheet" type="text/css" href="css/ProConData.css">
+    <link rel="stylesheet" type="text/css" href="css/ProConDataNoCursor.css">
     <link rel="stylesheet" type="text/css" href="css/ProConIcon.css">
     <link rel="stylesheet" type="text/css" href="css/FullTextProCon.css">
     <link rel="stylesheet" type="text/css" href="css/FullTextUser.css">
