->Reactive gadget tests

--- a/testing_MB/hDayOauth2/simpleGadget/simpleGadget.html
+++ b/testing_MB/hDayOauth2/simpleGadget/simpleGadget.html
@@ -1,8 +1,8 @@
 <html>
 <body>
 	<iframe 
-	frameborder="0" scrolling="no" width="760" height="600" 
-	src="https://opensapunit3c5221352trial.hanatrial.ondemand.com/OpenSAP2015/getSingleUseToken.jsp">
+	width="760" height="600" 
+	src="https://cloud.saplumira.com/open?key=5438FC205A4C1F73E10000000A4E4243&type=HANALYTIC">
 	</iframe>
 </body>
 </html>
