--- a/testing_MB/hDayOauth2/simpleGadget/simpleGadget.html
+++ b/testing_MB/hDayOauth2/simpleGadget/simpleGadget.html
@@ -1,7 +1,7 @@
 <html>
 <body>
 	<iframe 
-	frameborder="0" scrolling="no"
+	width="760" height="600" 
 	src="https://cloud.saplumira.com/open?key=5438FC205A4C1F73E10000000A4E4243&type=HANALYTIC">
 	</iframe>
 </body>
