rewrite UI based on David Choy's new design. new design url: https://jam4.sapjam.com/groups/7fBjwieUYyo88d14EzrNZe/documents/6IGd8mLKq0InMpaY6Ayifd/slide_viewer

--- a/PaulChen/ProConGadget/ProCon.react.html
+++ b/PaulChen/ProConGadget/ProCon.react.html
@@ -2,9 +2,11 @@
   <head>
     <link rel="stylesheet" type="text/css" href="bower_components/bootstrap/dist/css/bootstrap.css">
     <link rel="stylesheet" type="text/css" href="bower_components/bootstrap/dist/css/bootstrap-theme.css">
+    <link rel="stylesheet" type="text/css" href="bower_components/font-awesome/css/font-awesome.css">
     <link rel="stylesheet" type="text/css" href="css/PCTDataTable.css">
     <link rel="stylesheet" type="text/css" href="css/PCTHead.css">
-    <link rel="stylesheet" type="text/css" href="css/PCTFoot.css">
+    <link rel="stylesheet" type="text/css" href="css/PCTDefaultRow.css">
+    <link rel="stylesheet" type="text/css" href="css/PCTDefaultRowMouseOver.css">
     <link rel="stylesheet" type="text/css" href="css/OptionData.css">
     <link rel="stylesheet" type="text/css" href="css/ProConData.css">
     <link rel="stylesheet" type="text/css" href="css/ProConDataNoCursor.css">
