--- a/PaulChen/ProConGadget/ProCon.react.html
+++ b/PaulChen/ProConGadget/ProCon.react.html
@@ -1,8 +1,8 @@
 <html>
   <head>
-    <link rel="stylesheet" type="text/css" href="bower_components/bootstrap/dist/css/bootstrap.css">
-    <link rel="stylesheet" type="text/css" href="bower_components/bootstrap/dist/css/bootstrap-theme.css">
-    <link rel="stylesheet" type="text/css" href="bower_components/font-awesome/css/font-awesome.css">
+    <link rel="stylesheet" href="//cdn.bootcss.com/bootstrap/3.3.5/css/bootstrap.min.css">
+    <link rel="stylesheet" href="//cdn.bootcss.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="css/PCTDataTable.css">
     <link rel="stylesheet" type="text/css" href="css/PCTHead.css">
     <link rel="stylesheet" type="text/css" href="css/PCTDefaultRow.css">
@@ -12,8 +12,8 @@
     <link rel="stylesheet" type="text/css" href="css/FullTextProCon.css">
     <link rel="stylesheet" type="text/css" href="css/FullTextUser.css">
     <script src="bower_components/react/react.js"></script>
-    <script src="bower_components/jquery/dist/jquery.js"></script>
-    <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
+    <script src="https://code.jquery.com/jquery-2.1.4.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
     <script src="bower_components/react-bootstrap/react-bootstrap.js"></script>
   </head>
   <body>
