refine pro con gadget UI behavior

--- a/PaulChen/ProConGadget/ProCon.react.html
+++ b/PaulChen/ProConGadget/ProCon.react.html
@@ -16,7 +16,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
     <script src="bower_components/react-bootstrap/react-bootstrap.js"></script>
   </head>
-  <body>
+  <body style="text-align:middle">
     <script src="build/ProCon.react.js"></script>
   </body>
 </html>
