--- a/PaulChen/ProConGadget/ProCon.react.html
+++ b/PaulChen/ProConGadget/ProCon.react.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" type="text/css" href="css/FullTextProCon.css">
     <link rel="stylesheet" type="text/css" href="css/FullTextUser.css">
     <script src="bower_components/react/react.js"></script>
+    <script src="bower_components/jquery/dist/jquery.js"></script>
     <script src="https://code.jquery.com/jquery-2.1.4.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
     <script src="bower_components/react-bootstrap/react-bootstrap.js"></script>
