--- a/PaulChen/ProConGadget/ProCon.react.html
+++ b/PaulChen/ProConGadget/ProCon.react.html
@@ -14,8 +14,10 @@
     <link rel="stylesheet" type="text/css" href="css/FullTextUser.css">
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <!--[if lt IE 9]>
-      <script src="//cdnjs.cloudflare.com/ajax/libs/es5-shim/3.4.0/es5-shim.js"></script>
-      <script src="//cdnjs.cloudflare.com/ajax/libs/es5-shim/3.4.0/es5-sham.js"></script>
+      <script src="//cdnjs.cloudflare.com/ajax/libs/es5-shim/4.1.13/es5-shim.min.js></script>
+      <script src="//cdnjs.cloudflare.com/ajax/libs/es5-shim/4.1.13/es5-sham.min.js"></script>
+      <script src="//cdnjs.cloudflare.com/ajax/libs/respond.js/1.4.2/respond.min.js"></script>
+      <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script>
     <![endif]-->
     <script src="//cdnjs.cloudflare.com/ajax/libs/react/0.13.3/react.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/react-bootstrap/0.24.5/react-bootstrap.min.js"></script>
