--- a/testing_MB/FlashGadget/FlashGadget.html
+++ b/testing_MB/FlashGadget/FlashGadget.html
@@ -3,8 +3,10 @@
 	<title>FlashGadget</title>
 </header>
 <body>
+	<embed width="640" height="480" src="Sample.swf" type="application/x-shockwave-flash"></embed>
+	<!--
 	<embed width="640" height="480" base="http://external.kongregate-games.com/gamez/0011/5608/live/" src="http://external.kongregate-games.com/gamez/0011/5608/live/embeddable_115608.swf" type="application/x-shockwave-flash"></embed><br/>Play free games at <a href="http://www.kongregate.com/">Kongregate</a>
-	
+	-->
 	<!--
 	<iframe 
 	frameborder="0" scrolling="no" width="760" height="600" 
