--- a/PaulChen/ProConGadget/ProCon.react.html
+++ b/PaulChen/ProConGadget/ProCon.react.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" type="text/css" href="css/ProConData.css">
     <link rel="stylesheet" type="text/css" href="css/FullTextProCon.css">
     <link rel="stylesheet" type="text/css" href="css/FullTextUser.css">
+    <link rel="stylesheet" type="text/css" href="css/ProConHide.css">
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/es5-shim/4.1.13/es5-shim.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/es5-shim/4.1.13/es5-sham.min.js"></script>
