--- a/stsample/stsample.html
+++ b/stsample/stsample.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <!-- <script src="https://code.jquery.com/jquery-1.11.2.js"></script> -->
+    <script src="https://code.jquery.com/jquery-1.11.2.js"></script>
     <script src="stsample.js"></script>
   </head>
   <body>
