--- a/testing_MB/test/Universal_URL/url.html
+++ b/testing_MB/test/Universal_URL/url.html
@@ -3,6 +3,8 @@
   <head>
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script type="text/javascript" src="url.js"></script>
+
+    <link rel="stylesheet" type="text/css" href="url.css" />
   </head>
   <body>
     <div id="gadget" >
