--- a/testing_MB/test/OSAPI_people/OSAPI_people.html
+++ b/testing_MB/test/OSAPI_people/OSAPI_people.html
@@ -2,9 +2,9 @@
 <html>
   <head>
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-    <script type="text/javascript" src="url.js"></script>
+    <script type="text/javascript" src="OSAPI_people.js"></script>
 
-    <link rel="stylesheet" type="text/css" href="url.css" />
+    <link rel="stylesheet" type="text/css" href="OSAPI_people.css" />
   </head>
   <body>
     <div id="gadget" >
