--- a/testing_MB/ForDocs/OSAPI_people/OSAPI_people.html
+++ b/testing_MB/ForDocs/OSAPI_people/OSAPI_people.html
@@ -8,7 +8,8 @@
   </body>
   <script>
     $(document).ready(function() {
-      appendText();
+      //appendText();
+      makeOSAPIownerCALL();
       makeOSAPIpeopleCall();
     });
   </script>
