--- a/chart/chart.html
+++ b/chart/chart.html
@@ -16,8 +16,8 @@ function drawCurveTypes() {
   ],
   false); // 'false' means that the first row contains labels, not data.
 
-
-  var options = {
+  var options = {};
+  var xoptions = {
     hAxis: {
       title: 'Month'
     },
