--- a/chart/chart.html
+++ b/chart/chart.html
@@ -1,6 +1,7 @@
 <script type="text/javascript" src="https://www.google.com/jsapi"></script>
 <div id="chart_div"></div>
 <script>
+function runNow() {
 google.load('visualization', '1', {packages: ['corechart', 'line']});
 google.setOnLoadCallback(drawCurveTypes);
 
@@ -32,4 +33,12 @@ function drawCurveTypes() {
   var chart = new google.visualization.LineChart(document.getElementById('chart_div'));
   chart.draw(data, options);
 }
+}
+
+gadgets.util.registerOnLoadHandler(function() {
+  runNow();
+  window.setTimeout(function() {
+    gadgets.window.adjustHeight();
+  }, 300);
+});
 </script>
