Made script call into a space delimited single line. Testing.

--- a/testing_MB/ui5/test01/index.html
+++ b/testing_MB/ui5/test01/index.html
@@ -14,11 +14,14 @@
      data-sap-ui-libs="sap.ui.commons"></script>-->
 
  <!-- 1.) Load SAPUI5, select theme and control library -->
- <script id="sap-ui-bootstrap"
+<!--<script id="sap-ui-bootstrap"
      type="text/javascript"
      src="https://sap-oxygen.github.io/testing_MB/ui5/test01/resources/sap-ui-core.js"
      data-sap-ui-theme="sap_goldreflection"
-     data-sap-ui-libs="sap.ui.commons"></script>
+     data-sap-ui-libs="sap.ui.commons"></script>-->
+
+ <!-- 1.) Load SAPUI5, select theme and control library -->
+<script id="sap-ui-bootstrap" type="text/javascript" src="https://sap-oxygen.github.io/testing_MB/ui5/test01/resources/sap-ui-core.js" data-sap-ui-theme="sap_goldreflection" data-sap-ui-libs="sap.ui.commons"></script>
  
  <!-- 2.) Create a UI5 button and place it onto the page -->
  <script>
