--- a/testing_MB/1508_JavascriptAPI/SAPJAM_context_statusbar/SAPJAM_context.html
+++ b/testing_MB/1508_JavascriptAPI/SAPJAM_context_statusbar/SAPJAM_context.html
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="UTF-8" ?>
+<!DOCTYPE html>
 <!--
 License
 Copyright 2014, SAP AG
@@ -9,10 +9,16 @@ http://www.apache.org/licenses/LICENSE-2.0
 
 Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.
 -->
-<Module>
-  <ModulePrefs title="SAPJAM_context - Obtains the context of a preview, profile or statusbar gadget instance" height="1024">
-    <Require feature="dynamic-height" />
-    <Require feature="osapi"/>
-  </ModulePrefs>
-  <Content type="html" href="SAPJAM_context.html" />
-</Module >
+<html>
+  <head>
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    <script type="text/javascript" src="SAPJAM_context.js"></script>
+  </head>
+  <body>
+  </body>
+  <script>
+    $(document).ready(function() {
+      make_SAPJAM_context_Call();
+    });
+  </script>
+</html>
