--- a/testing_MB/1508_JavascriptAPI/SAPJAM_context_statusbar/SAPJAM_context.html
+++ b/testing_MB/1508_JavascriptAPI/SAPJAM_context_statusbar/SAPJAM_context.html
@@ -11,6 +11,7 @@ Unless required by applicable law or agreed to in writing, software distributed 
 -->
 <html>
   <head>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script type="text/javascript" src="SAPJAM_context.js"></script>
   </head>
