--- a/testing_MB/Widgets/Share/Share_Widget.html
+++ b/testing_MB/Widgets/Share/Share_Widget.html
@@ -3,11 +3,11 @@
         <title>Some Page</title>
     </head>
     <body>
-        <div id="shareWidgetTest1" style="width:100%; height:100%"></div>
+        <div id="myDiv" style="width:100%; height:100%"></div>
         
 		<script type="text/javascript" src="https://developer.sapjam.com/assets/share_widget_v1.js"></script>
 		<script type="text/javascript">
-		var w = sap.jam.shareWidget.create("https://developer.sapjam.com/c/i850769trial.hanatrial.ondemand.com.cubetree.biz/widget/v1/share", "shareWidgetTest1", {url: "https://sap-oxygen.github.io/testing_MB/Widgets/Share/Share_Widget.html", create_button: true});</script>
+		var w = sap.jam.shareWidget.create("https://developer.sapjam.com/c/i850769trial.hanatrial.ondemand.com.cubetree.biz/widget/v1/share", "myDiv", {url: "https://sap-oxygen.github.io/testing_MB/Widgets/Share/Share_Widget.html", create_button: true});</script>
 
     </body>
 </html>
