Using wave's registerOnLoadHandler to check for the page and gadget being ready instead of JQuery's equivalent which only checks for the page being ready.

--- a/testing_MB/1508_JavascriptAPI/SAPJAM_context_statusbar/SAPJAM_context.html
+++ b/testing_MB/1508_JavascriptAPI/SAPJAM_context_statusbar/SAPJAM_context.html
@@ -17,9 +17,9 @@ Unless required by applicable law or agreed to in writing, software distributed 
   </head>
   <body>
   </body>
-  <script>
+  <!-- <script>
     $(document).ready(function() {
       make_SAPJAM_context_Call();
     });
-  </script>
+  </script> -->
 </html>
