--- a/30501.html
+++ b/30501.html
@@ -1,6 +1,6 @@
  <html><head>
         <title>This is invalid <script>HTML</title> because of the unbalanced </script> tags
-        <meta property="og:description" content="This is good &amp; valid" />
+        <meta name="description" content="This is good &amp; valid" />
         <meta property="og:image" content="This is not a URL" />
         <meta property="og:image" content="javascript:alert(jamApp)" />
         <meta property="og:image" content="file://blabla" />
