--- a/30501.html
+++ b/30501.html
@@ -1,5 +1,5 @@
  <html><head>
-        <title>This is invalid <script>HTML</title> because of the unbalanced </script> tags
+  <title>This is good &amp; valid</title>
         <meta name="description" content="This is good &amp; valid" />
         <meta property="og:image" content="This is not a URL" />
         <meta property="og:image" content="javascript:alert(jamApp)" />
